# classificacao-ia-fatec

./: README.md  classification.ipynb  pyproject.toml
